# fastermypy

./: .gitignore  README.md  pyproject.toml  setup.py
fastermypy/: __init__.py  __main__.py
